@@ -1,4 +1,4 @@
-// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2012 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -14,8 +14,11 @@
 
 namespace CastleTests.GenInterfaces
 {
-	public interface IConstraint_Method1IsTypeStructAndMethod2<TType>
+	public interface IHaveGenericMethodWithNewClassStructConstraints
 	{
-		void Method<TMethod1, TMethod2>(TMethod1 one, TMethod2 two, TType three) where TMethod1 : struct, TType, TMethod2;
+		void MethodVoid<T, U, V>(T arg1, U arg2, V arg3)
+			where T : new()
+			where U : class
+			where V : struct;
 	}
 }
