@@ -54,7 +54,7 @@ namespace Castle.DynamicProxy.Generators.Emitters.SimpleAST
 				{
 					gen.Emit(OpCodes.Box, reference.Type.UnderlyingSystemType);
 				}
-				if (reference.Type.IsGenericParameter)
+				else if (reference.Type.IsGenericParameter)
 				{
 					gen.Emit(OpCodes.Box, reference.Type);
 				}
